Prevent collapsing margings in blocks

--- a/templates/scss/admin.scss
+++ b/templates/scss/admin.scss
@@ -1,2 +1,9 @@
+@import "config";
 @import "stone_icon_font";
+@import "ui/sg.inserter";
 
+.block {
+  // Prevent collapsing margins
+  padding-top: 1px;
+  padding-bottom: 1px;
+}
